# CudaMCTS-Checkers

./: .clang-format  CMakeLists.txt  LICENSE  README.md  clang-format.sh  main.cpp  main.cu
include/: Board.hpp  MonteCarloTree.hpp  MonteCarloTree.tpp  Move.hpp  board.hpp  board.tpp  board_helpers.cuh  capture_look_up_table.hpp  checkers_defines.hpp  checkers_engine.hpp  checkers_engine.tpp  checkers_game.hpp  cli_gui.hpp  concepts.hpp  cpp_defines.hpp  defines.hpp  game_simulation.hpp  monte_carlo_tree.hpp  monte_carlo_tree.tpp  move.hpp  move_direction.hpp  move_generation.cuh  move_generation.hpp  move_generation.tpp  types.hpp
include/common/: checkers_defines.hpp  concepts.hpp  parallel.hpp
include/cpu/: apply_move.hpp  board.hpp  board_helpers.hpp  capture_lookup_table.hpp  launchers.hpp  move_generation.hpp  move_selection.hpp
include/cuda/: apply_move.cuh  board_helpers.cuh  capture_lookup_table.cuh  check_outcome.cuh  check_outcome.tpp  cuda_utils.cuh  game_simulation.cuh  launchers.cuh  move_generation.cuh  move_generation.tpp  move_selection.cuh  reductions.cuh
include/cuda/launchers/: move_generation_launcher.cuh
include/game/: checkers_engine.hpp  checkers_game.hpp  cli_gui.hpp
include/mcts/: monte_carlo_tree.hpp  monte_carlo_tree.tpp  simulation_results.hpp
src/: MonteCarloTree.cpp  apply_move.cu  board.cpp  capture_look_up_table.cpp  checkers_engine.cpp  checkers_game.cpp  cli_gui.cpp  cuda_utils.cu  game_simulation.cpp  monte_carlo_tree.cpp  move_generation.cpp  move_selection.cu
src/cpu/: apply_move.cpp  capture_lookup_table.cpp  launchers.cpp  move_selection.cpp
src/cuda/: apply_move.cu  capture_lookup_table.cu  cuda_utils.cu  game_simulation.cu  launchers.cu  move_selection.cu  reductions.cu
src/game/: checkers_engine.cpp  checkers_game.cpp  cli_gui.cpp
src/mcts/: monte_carlo_tree.cpp
tests/: CMakeLists.txt  apply_move_test.cu  board_test.cpp  checkers_engine_game_histories_test.cpp  checkers_engine_test.cpp  cpu_vs_gpu_test.cu  example_test.cpp  game_histories_test.cu  game_simulation_test.cu  gpu_move_generation_test.cu  grid_search.cu  is_on_edge_test.cu  move_generation.cpp  move_generation_test.cu  move_selection_test.cu  setup.cu
tests/game_histories/: crash-game-1.txt  crash-game-2.txt  test_game_1.txt  test_game_10.txt  test_game_11.txt  test_game_12.txt  test_game_13.txt  test_game_14.txt  test_game_15.txt  test_game_16.txt  test_game_2.txt  test_game_3.txt  test_game_4.txt  test_game_5.txt  test_game_6.txt  test_game_7.txt  test_game_8.txt  test_game_9.txt
tests/gpu/: apply_move_test.cu  game_simulation_test.cu  move_generation_test.cu  move_selection_test.cu  setup.cu
